--- a/src/theme/stylus/print.styl
+++ b/src/theme/stylus/print.styl
@@ -12,6 +12,10 @@
         overflow-y: initial;
     }
 
+    .page-wrapper {
+        padding-left: 0px;
+    }
+
     #content {
         max-width: none;
         margin: 0;
