--- a/src/theme/book.css
+++ b/src/theme/book.css
@@ -931,6 +931,9 @@ table thead td {
     left: 0;
     overflow-y: initial;
   }
+  #page-wrapper.page-wrapper {
+    padding-left: 0px;
+  }
   #content {
     max-width: none;
     margin: 0;
