--- a/src/theme/index.hbs
+++ b/src/theme/index.hbs
@@ -56,6 +56,16 @@
             }
         </script>
 
+        <!-- Fetch mark.js from CDN but have a local fallback -->
+        <script src="https://cdn.jsdelivr.net/npm/mark.js@8.11.0/dist/jquery.mark.min.js"></script>
+        <script>
+            if (typeof jQuery.fn.mark == 'undefined') {
+                document.write(unescape("%3Cscript src='jquery.mark.min.js'%3E%3C/script%3E"));
+            }
+        </script>
+
+
+
         <!-- Fetch store.js from local - TODO add CDN when 2.x.x is available on cdnjs -->
         <script src="store.js"></script>
 
@@ -76,11 +86,6 @@
         </script>
 
         <div id="sidebar" class="sidebar">
-            <div id="searchresults-outer" class="searchresults-outer">
-                <div class="searchresults-header" id="searchresults-header"></div>
-                <ul id="searchresults">
-                </ul>
-            </div>
             {{#toc}}{{/toc}}
         </div>
 
@@ -91,8 +96,7 @@
                     <div class="left-buttons">
                         <i id="sidebar-toggle" class="fa fa-bars" title="Toggle sidebar"></i>
                         <i id="theme-toggle" class="fa fa-paint-brush" title="Change theme"></i>
-                        <input type="search" id="searchbar" name="searchbar" placeholder="Search this book ...">
-                        <i id="search-go" class="fa fa-search" title="Search!"></i>
+                        <i id="search-icon" class="fa fa-search" title="Search!"></i>
                     </div>
 
                     <h1 class="menu-title">{{ book_title }}</h1>
@@ -103,6 +107,17 @@
                         </a>
                     </div>
                 </div>
+
+                <div id="searchbar-outer" class="searchbar-outer">
+                    <input type="search" id="searchbar" name="searchbar" placeholder="Search this book ...">
+
+                    <div id="searchresults-outer" class="searchresults-outer">
+                        <div class="searchresults-header" id="searchresults-header"></div>
+                        <ul id="searchresults">
+                        </ul>
+                    </div>
+                </div>
+
 
                 <div id="content" class="content">
                     {{{ content }}}
