--- a/src/theme/stylus/variables.styl
+++ b/src/theme/stylus/variables.styl
@@ -1,4 +1,5 @@
 $sidebar-width = 300px
 $page-padding = 15px
-$max-page-width-with-hidden-sidebar = 1060px
 $content-max-width = 750px
+$max-page-width-with-hidden-sidebar = 1060px
+$page-plus-sidebar-width = $content-max-width + $sidebar-width + $page-padding * 2
