--- a/src/theme/index.hbs
+++ b/src/theme/index.hbs
@@ -74,7 +74,7 @@
 
         <div id="page-wrapper" class="page-wrapper">
 
-            <div class="page" tabindex="-1">
+            <div class="page">
                 {{> header}}
                 <div id="menu-bar" class="menu-bar">
                     <div class="left-buttons">
