--- a/src/theme/css/chrome.css
+++ b/src/theme/css/chrome.css
@@ -389,7 +389,7 @@ a:hover {
     color: var(--icons);
 }
 .theme-popup .theme {
-    display: inline;
+    width: 100%;
     border: 0;
     margin: 0;
     padding: 2px 10px;
