Wrap tables in an overflow-x wrapper div

--- a/src/theme/css/general.css
+++ b/src/theme/css/general.css
@@ -31,6 +31,11 @@ code {
     word-break: break-word;
 }
 
+/* make wide tables scroll if they overflow */
+.table-wrapper {
+    overflow-x: auto;
+}
+
 /* Don't change font size in headers. */
 h1 code, h2 code, h3 code, h4 code, h5 code, h6 code {
     font-size: unset;
