--- a/src/theme/css/general.css
+++ b/src/theme/css/general.css
@@ -26,9 +26,9 @@ code {
     font-size: 0.875em; /* please adjust the ace font size accordingly in editor.js */
 }
 
-/* make long inline code not x overflow */
-:not(pre) > code {
-    word-break: break-word;
+/* make long words/inline code not x overflow */
+main {
+    overflow-wrap: anywhere;
 }
 
 /* make wide tables scroll if they overflow */
