--- a/src/front-end/templates/index.hbs
+++ b/src/front-end/templates/index.hbs
@@ -64,50 +64,58 @@
     </head>
     <body>
     <div id="body-container">
-        <!-- Work around some values being stored in localStorage wrapped in quotes -->
+        <input type="checkbox" id="sidebar-toggle-anchor" class="hidden">
+
         <script>
-            try {
-                let theme = localStorage.getItem('mdbook-theme');
-                let sidebar = localStorage.getItem('mdbook-sidebar');
+        //  First declare the global constants needed everywhere, outside of the function wrapper
+        //  TODO refactoring: maybe all variables that are currently global could be moved to a single global object (window.mdBook) to avoid cluttering the global namespace?
+        const default_theme = window.matchMedia("(prefers-color-scheme: dark)").matches ? default_dark_theme : default_light_theme;
+        const html = document.documentElement;
+        const sidebar_toggle = document.getElementById("sidebar-toggle-anchor");
 
-                if (theme.startsWith('"') && theme.endsWith('"')) {
-                    localStorage.setItem('mdbook-theme', theme.slice(1, theme.length - 1));
+        (function(){
+            function getConfig(key, storage = localStorage) {
+                const fullKey = "mdbook-" + key;
+                try {
+                    let value = storage.getItem(fullKey);
+
+                    if(value && value.startsWith('"')) {
+                        //  Work around some values being stored in localStorage wrapped in quotes
+                        //  Probably for legacy reasons?
+                        value = value.replace(/^"|"$/g, "");
+                        storage.setItem(fullKey, value);
+                    }
+                    return value;
+                } catch(e) {
+                    //  It can only be a security exception (if the user has disabled cookies/storage)
+                    //  TODO: we could warn the user that we won’t be able to persist their settings, but maybe it would be better to do it only if/when they try to change them? (ie when they try to hide or show the sidebar, or change the theme)
+                    return null;
                 }
+            }
 
-                if (sidebar.startsWith('"') && sidebar.endsWith('"')) {
-                    localStorage.setItem('mdbook-sidebar', sidebar.slice(1, sidebar.length - 1));
-                }
-            } catch (e) { }
-        </script>
+            //  Set the theme before any content is loaded, prevents flash
 
-        <!-- Set the theme before any content is loaded, prevents flash -->
-        <script>
-            const default_theme = window.matchMedia("(prefers-color-scheme: dark)").matches ? default_dark_theme : default_light_theme;
-            let theme;
-            try { theme = localStorage.getItem('mdbook-theme'); } catch(e) { }
-            if (theme === null || theme === undefined) { theme = default_theme; }
-            const html = document.documentElement;
+            let theme = getConfig("theme") ?? default_theme;
             html.classList.remove('{{ default_theme }}')
             html.classList.add(theme);
             html.classList.add("js");
-        </script>
 
-        <input type="checkbox" id="sidebar-toggle-anchor" class="hidden">
+            //  Hide / unhide sidebar before it is displayed, and restore its width if it was manually resized
 
-        <!-- Hide / unhide sidebar before it is displayed -->
-        <script>
-            let sidebar = null;
-            const sidebar_toggle = document.getElementById("sidebar-toggle-anchor");
-            if (document.body.clientWidth >= 1080) {
-                try { sidebar = localStorage.getItem('mdbook-sidebar'); } catch(e) { }
-                sidebar = sidebar || 'visible';
-            } else {
-                sidebar = 'hidden';
-            }
+            let sidebar = getConfig("sidebar", sessionStorage) ??
+                ((document.body.clientWidth >= 1080) ? "visible" : "hidden");
+
             sidebar_toggle.checked = sidebar === 'visible';
             html.classList.remove('sidebar-visible');
             html.classList.add("sidebar-" + sidebar);
-        </script>
+
+            //  We need parseInt() because storage only stores strings
+            let sidebarWidth = parseInt(getConfig("sidebarWidth", sessionStorage), 10);
+            if(sidebarWidth && Number.isFinite(sidebarWidth)) {
+                document.documentElement.style.setProperty('--sidebar-width', Math.min(sidebarWidth, window.innerWidth - 100) + 'px');
+            }
+
+        })();</script>
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <!-- populated by js -->
