Add canonical-site-url setting
Based on the conversation in https://github.com/rust-lang/mdBook/issues/1238,
this implements the suggestion by markhildreth to implement such a setting.

I've additionally infixed `-site-` to highlight the relationship with the
`site-url`, and to distinguish it from the canonical URL as it occurs in a
page.

--- a/crates/mdbook-html/front-end/templates/index.hbs
+++ b/crates/mdbook-html/front-end/templates/index.hbs
@@ -10,6 +10,9 @@
         {{#if base_url}}
         <base href="{{ base_url }}">
         {{/if}}
+        {{#if canonical_url}}
+        <link rel="canonical" href="{{ canonical_url }}">
+        {{/if}}
 
 
         <!-- Custom HTML head -->
